update on page load and every 3 seconds

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,6 +55,7 @@
 
                }
 
+               updateData();
                setInterval(updateData, 3000);
                </script>
                </table>
